no output, show warnings

--- a/scrape-sentiment/action.yaml
+++ b/scrape-sentiment/action.yaml
@@ -64,8 +64,8 @@ runs:
           -H 'Sec-GPC: 1' \
           -H 'Priority: u=4' > reviews.html
 
-        echo REVIEWS=$(xmllint --html --recover --nowarning --format --xpath "//div[@data-testid='reviewsList']" reviews.html 2>/dev/null) >> $GITHUB_OUTPUT
-        xmllint --html --recover --nowarning --format --xpath "//div[@data-testid='reviewsList']" reviews.html 2>/dev/null
+        # echo REVIEWS=$(xmllint --html --recover --nowarning --format --xpath "//div[@data-testid='reviewsList']" reviews.html 2>/dev/null) >> $GITHUB_OUTPUT
+        xmllint --html --recover --nowarning --format --xpath "//div[@data-testid='reviewsList']" reviews.html
     - name: Output test
       shell: bash
       run: echo "${{ steps.scrape-sentiment.outputs.REVIEWS }}"
