--- a/gemini-cover-outline/action.yaml
+++ b/gemini-cover-outline/action.yaml
@@ -8,7 +8,8 @@ inputs:
   GEMINI_MODEL:
     description: Gemini Model
     required: true
-    default: gemini-2.5-flash
+    # The name says 'preview' but is publicly displayed as 'Gemini 2.5 Flash'
+    default: gemini-2.5-flash-preview-05-20
   RESUME_TEXT:
     description: Resume Text
     required: true
