--- a/gemini-last-looks/action.yaml
+++ b/gemini-last-looks/action.yaml
@@ -41,16 +41,13 @@ runs:
         GOOGLE_API_KEY: ${{ inputs.GOOGLE_API_KEY }}
         GEMINI_MODEL: ${{ inputs.GEMINI_MODEL }}
         RESUME_MIME_TYPE: ${{ inputs.RESUME_MIME_TYPE }}
-        RESUME_TEXT: ${{ inputs.RESUME_TEXT }}
-        CAREER_GROWTH_KEYWORDS: ${{ inputs.CAREER_GROWTH_KEYWORDS }}
-        JOB_DESCRIPTION_MIME_TYPE: ${{ inputs.JOB_DESCRIPTION_MIME_TYPE }}
-        JOB_DESCRIPTION: ${{ inputs.JOB_DESCRIPTION }}
+        RESUME_FILENAME: ${{ inputs.RESUME_FILENAME }}
         PERSONA: ${{ inputs.PERSONA }}
       with:
         script: |
           const fs = require('fs')
 
-          const resumeContent = fs.readFileSync(process.env.RESUME_PATH).toString('base64');
+          const resumeContent = fs.readFileSync(process.env.RESUME_FILENAME).toString('base64');
           console.log(resumeContent);
           const payload = {
             system_instruction: {
