--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -36,7 +36,7 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.REPO_TOKEN }}
 
-      - name: Supress personal information (no-op)
+      - name: Suppress personal information (no-op)
         # GitHub Actions only hides secrets that are referenced in the workflow file.
         # This is a no-op step to ensure that the secrets are not exposed in the logs.
         shell: bash
@@ -62,7 +62,7 @@ jobs:
 
       - name: Run gemini-qualified action
         id: gemini-check
-        uses: dev-dull/job-search-automations/gemini-qualified@v1.0.2
+        uses: dev-dull/job-search-automations/gemini-qualified@vc7beb82ecba3f30229e1c639902d4ed84cfb4a6b
         with:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           RESUME_TEXT: ${{ env.RESUME_TEXT }}
