--- a/.github/workflows/cut-release.yaml
+++ b/.github/workflows/cut-release.yaml
@@ -35,6 +35,7 @@ jobs:
           MINOR=$(echo $NEW_TAG | cut -d. -f2)
 
           repoURL=$(git remote get-url origin | sed "s/github\.com/${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/1")
+          echo $repoURL
           git remote set-url origin ${repoURL}
 
           # Create and push vMAJOR and vMAJOR.MINOR tags
