see if cred hiding is clobbering info

--- a/.github/workflows/cut-release.yaml
+++ b/.github/workflows/cut-release.yaml
@@ -34,7 +34,8 @@ jobs:
           MAJOR=$(echo $NEW_TAG | cut -d. -f1)
           MINOR=$(echo $NEW_TAG | cut -d. -f2)
 
-          repoURL=$(git remote get-url origin | sed "s/github\.com/${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/1")
+          # repoURL=$(git remote get-url origin | sed "s/github\.com/${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/1")
+          repoURL=$(git remote get-url origin | sed "s/github\.com/${GITHUB_USERNAME}@github.com/1")
           echo "x${repoURL}x"
           git remote set-url origin "${repoURL}"
           echo 'xs'
