--- a/.github/workflows/cut-release.yaml
+++ b/.github/workflows/cut-release.yaml
@@ -29,18 +29,20 @@ jobs:
         # There has to be a better way to do this, but none of the tagging actions appear to support this natively.
         if: ${{ steps.bump_version.outputs.new_tag != '' }}
         run: |
+          # Configure git to use the GITHUB_TOKEN for authentication
+          git config --global url."https://x-access-token:${{ secrets.REPO_TOKEN }}@github.com/".insteadOf "https://github.com/"
+
           # Extract major, minor, and patch versions
           NEW_TAG=${{ steps.bump_version.outputs.new_tag }}
           MAJOR=$(echo $NEW_TAG | cut -d. -f1)
           MINOR=$(echo $NEW_TAG | cut -d. -f2)
 
           # repoURL=$(git remote get-url origin | sed "s/github\.com/${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/1")
-          repoURL=$(git remote get-url origin | sed "s/github\.com/${GITHUB_USERNAME}@github.com/1")
-          echo "x${repoURL}x"
-          git remote set-url origin "${repoURL}"
-          echo 'xs'
-          git remote get-url origin
-          echo 'xe'
+          # echo "x${repoURL}x"
+          # git remote set-url origin "${repoURL}"
+          # echo 'xs'
+          # git remote get-url origin
+          # echo 'xe'
 
           # Create and push vMAJOR and vMAJOR.MINOR tags
           git tag "v${MAJOR}"
